One apples-to-apples benchmark table per platform; runBenchAll.sh;BenchAll prints NumPy | Scala | Rust | Scala·BLAS | Rust·BLAS over every MatD,     layout and 3PRF row, plus a geomean/median summary of each pair; the script     builds both Rust flavours side by side and logs to bench-logs/. Its first     run found MatD::matmulBlas copying operands (1.9→0.86 ms at 512³): fixed.